Delegate list skeleton

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -364,6 +364,14 @@
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit" />
+
+        <action
+            android:id="@+id/action_mainFragment_to_delegation"
+            app:destination="@id/delegation_nav_graph"
+            app:enterAnim="@anim/fragment_open_enter"
+            app:exitAnim="@anim/fragment_open_exit"
+            app:popEnterAnim="@anim/fragment_close_enter"
+            app:popExitAnim="@anim/fragment_close_exit" />
     </fragment>
 
 
@@ -1084,4 +1092,6 @@
     <include app:graph="@navigation/referendum_details_graph" />
 
     <include app:graph="@navigation/referendum_unlock_graph" />
+
+    <include app:graph="@navigation/delegation_nav_graph" />
 </navigation>
