--- a/feature-governance-impl/src/main/res/values/attrs.xml
+++ b/feature-governance-impl/src/main/res/values/attrs.xml
@@ -40,4 +40,9 @@
         <attr name="chipTextAppearance" format="reference" />
         <attr name="backgroundColor" format="color" />
     </declare-styleable>
+
+    <declare-styleable name="GovernanceLocksView">
+        <attr name="governanceLocksView_label" format="string" />
+        <attr name="governanceLocksView_icon" format="color|reference" />
+    </declare-styleable>
 </resources>
