--- a/feature-governance-impl/src/main/res/layout/item_delegate.xml
+++ b/feature-governance-impl/src/main/res/layout/item_delegate.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="12dp"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="8dp"
+    android:paddingStart="12dp"
     android:paddingEnd="12dp"
     android:paddingBottom="12dp"
     tools:background="@android:color/black">
@@ -28,13 +28,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:ellipsize="end"
+        android:includeFontPadding="false"
         android:singleLine="true"
         android:textColor="@color/text_primary"
         app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toTopOf="@+id/itemDelegateType"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/itemDelegateIcon"
         app:layout_constraintTop_toTopOf="@+id/itemDelegateIcon"
+        app:layout_constraintVertical_chainStyle="packed"
         tools:text="Novasama Technologies" />
 
     <io.novafoundation.nova.feature_governance_impl.presentation.view.NovaChipView
@@ -43,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         app:chipSize="small"
+        app:layout_constraintBottom_toBottomOf="@+id/itemDelegateIcon"
         app:layout_constraintStart_toStartOf="@+id/itemDelegateTitle"
         app:layout_constraintTop_toBottomOf="@+id/itemDelegateTitle"
         tools:chipIcon="@drawable/ic_organization"
@@ -56,7 +60,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/itemDelegateType"
+        app:layout_constraintTop_toBottomOf="@+id/itemDelegateIcon"
         tools:text="@tools:sample/lorem[10]" />
 
     <TextView
