--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -451,6 +451,11 @@
         <item name="android:textColor">@color/text_primary</item>
     </style>
 
+    <style name="AccentPositiveAlertDialogTheme" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
+        <item name="buttonBarPositiveButtonStyle">@style/AccentDialogPositiveButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/AccentDialogPositiveButtonStyle</item>
+    </style>
+
     <style name="AccentAlertDialogTheme" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
         <item name="buttonBarPositiveButtonStyle">@style/AccentDialogPositiveButtonStyle</item>
         <item name="buttonBarNegativeButtonStyle">@style/AccentDialogNegativeButtonStyle</item>
