--- a/feature-account-impl/src/main/res/layout/fragment_profile.xml
+++ b/feature-account-impl/src/main/res/layout/fragment_profile.xml
@@ -109,12 +109,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <FrameLayout
+                android:id="@+id/settingsSafeModeContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <com.google.android.material.switchmaterial.SwitchMaterial
+                    android:id="@+id/settingsSafeMode"
+                    style="@style/TextAppearance.NovaFoundation.Regular.SubHeadline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:drawableStart="@drawable/shield_checkmark_outline"
+                    android:drawablePadding="12dp"
+                    android:drawableTint="@color/icon_accent"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:minHeight="48dp"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    android:text="@string/profile_settings_safe_mode_title"
+                    android:textColor="@color/text_primary" />
+
+            </FrameLayout>
+
             <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsItemView
                 android:id="@+id/settingsPin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/ic_pin"
                 app:title="@string/profile_pincode_change_title" />
+
         </io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupView>
 
         <io.novafoundation.nova.feature_account_impl.presentation.settings.view.SettingsGroupHeaderView
@@ -216,7 +241,7 @@
             android:layout_height="32dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
-            android:src="@drawable/ic_nova_logo"/>
+            android:src="@drawable/ic_nova_logo" />
 
         <TextView
             android:id="@+id/settingsAppVersion"
