Split the navigation logic for the pin code

--- a/app/src/main/res/navigation/root_nav_graph.xml
+++ b/app/src/main/res/navigation/root_nav_graph.xml
@@ -29,7 +29,7 @@
 
     <action
         android:id="@+id/action_pin_code_access_recovery"
-        app:destination="@id/rootPincodeFragment"
+        app:destination="@id/pinCodeVerificationAfterInactivity"
         app:enterAnim="@anim/fragment_close_enter"
         app:exitAnim="@anim/fragment_close_exit"
         app:popEnterAnim="@anim/fragment_open_enter"
@@ -60,6 +60,12 @@
 
     <fragment
         android:id="@+id/rootPincodeFragment"
+        android:name="io.novafoundation.nova.feature_account_impl.presentation.pincode.PincodeFragment"
+        android:label="fragment_pincode"
+        tools:layout="@layout/fragment_pincode" />
+
+    <fragment
+        android:id="@+id/pinCodeVerificationAfterInactivity"
         android:name="io.novafoundation.nova.feature_account_impl.presentation.pincode.PincodeFragment"
         android:label="fragment_pincode"
         app:useAdd="true"
