--- a/common/src/main/res/layout/view_list_chooser.xml
+++ b/common/src/main/res/layout/view_list_chooser.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:layout_height="wrap_content"
     tools:layout_width="wrap_content"
@@ -32,5 +33,6 @@
         android:layout_gravity="center_vertical"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:src="@drawable/ic_chevron_down" />
+        android:src="@drawable/ic_chevron_down"
+        app:tint="@color/icon_primary" />
 </merge>
