--- a/common/src/main/res/values/themes.xml
+++ b/common/src/main/res/values/themes.xml
@@ -46,6 +46,9 @@
         <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
 
         <item name="defaultTextInputStyle">@style/Widget.Nova.Input.Text</item>
+
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textColorPrimary">@color/text_primary</item>
     </style>
 
     <style name="WhiteOverlay" parent="ThemeOverlay.AppCompat">
