--- a/app/src/main/res/navigation/onboarding_nav_graph.xml
+++ b/app/src/main/res/navigation/onboarding_nav_graph.xml
@@ -92,7 +92,7 @@
 
         <action
             android:id="@+id/action_watchWalletFragment_to_pincodeFragment"
-            app:destination="@id/rootPincodeFragment"
+            app:destination="@id/pincodeFragment"
             app:enterAnim="@anim/fragment_open_enter"
             app:exitAnim="@anim/fragment_open_exit"
             app:popEnterAnim="@anim/fragment_close_enter"
