--- a/app/src/main/res/navigation/root_nav_graph.xml
+++ b/app/src/main/res/navigation/root_nav_graph.xml
@@ -21,7 +21,7 @@
 
     <action
         android:id="@+id/open_pincode_check"
-        app:destination="@+id/rootPincodeFragment"
+        app:destination="@+id/pincodeFragment"
         app:enterAnim="@anim/fragment_open_enter"
         app:exitAnim="@anim/fragment_open_exit"
         app:popEnterAnim="@anim/fragment_close_enter"
@@ -50,7 +50,7 @@
 
         <action
             android:id="@+id/action_splash_to_pin"
-            app:destination="@id/rootPincodeFragment"
+            app:destination="@id/pincodeFragment"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit"
             app:popUpTo="@id/splashFragment"
@@ -59,7 +59,7 @@
     </fragment>
 
     <fragment
-        android:id="@+id/rootPincodeFragment"
+        android:id="@+id/pincodeFragment"
         android:name="io.novafoundation.nova.feature_account_impl.presentation.pincode.PincodeFragment"
         android:label="fragment_pincode"
         tools:layout="@layout/fragment_pincode" />
