Implement layout and logic

--- a/app/src/main/res/navigation/root_nav_graph.xml
+++ b/app/src/main/res/navigation/root_nav_graph.xml
@@ -9,6 +9,8 @@
 
     <include app:graph="@navigation/onboarding_nav_graph" />
 
+    <include app:graph="@navigation/versions_nav_graph" />
+
     <action
         android:id="@+id/action_open_main"
         app:destination="@id/main_nav_graph"
@@ -26,6 +28,16 @@
         app:exitAnim="@anim/fragment_open_exit"
         app:popEnterAnim="@anim/fragment_close_enter"
         app:popExitAnim="@anim/fragment_close_exit" />
+
+    <action
+        android:id="@+id/action_open_update_notifications"
+        app:destination="@id/versions_nav_graph"
+        app:enterAnim="@anim/fragment_open_enter"
+        app:exitAnim="@anim/fragment_open_exit"
+        app:popEnterAnim="@anim/fragment_close_enter"
+        app:popExitAnim="@anim/fragment_close_exit"
+        app:popUpTo="@id/root_nav_graph"
+        app:popUpToInclusive="true" />
 
     <fragment
         android:id="@+id/splashFragment"
