--- a/feature-versions-impl/src/main/res/layout/fragment_update_notifications.xml
+++ b/feature-versions-impl/src/main/res/layout/fragment_update_notifications.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,24 +12,36 @@
         app:dividerVisible="false"
         app:homeButtonVisible="false"
         app:layout_constraintTop_toTopOf="parent"
-        app:textRight="@string/common_later"
+        app:textRight="@string/common_skip"
         app:titleText="@string/update_notification_title" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/updatesList"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updatesToolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/updatesToolbar">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/updatesList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            android:paddingBottom="98dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:itemCount="10" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/updatesApply"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="50dp"
         android:text="@string/update_notification_install_btn"
-        app:layout_constraintBottom_toBottomOf="@+id/updatesList"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
