Complete navigation and progress bar

--- a/app/src/main/res/navigation/versions_nav_graph.xml
+++ b/app/src/main/res/navigation/versions_nav_graph.xml
@@ -16,7 +16,7 @@
             app:destination="@id/onboarding_nav_graph"
             app:popEnterAnim="@anim/fragment_close_enter"
             app:popExitAnim="@anim/fragment_close_exit"
-            app:popUpTo="@id/root_nav_graph"
+            app:popUpTo="@id/versions_nav_graph"
             app:popUpToInclusive="true" />
 
     </fragment>
