--- a/feature-governance-impl/src/main/res/layout/view_governance_locks.xml
+++ b/feature-governance-impl/src/main/res/layout/view_governance_locks.xml
@@ -39,9 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:chipIcon="@drawable/ic_lock"
-        app:chipIconSize="12dp"
-        app:chipTextAppearance="@style/TextAppearance.NovaFoundation.Regular.Footnote"
+        app:chipSize="sum"
+        app:chipTextAppearance="@style/TextAppearance.NovaFoundation.SemiBold.Footnote"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/governanceLockedTitle"
         app:layout_constraintTop_toTopOf="parent"
