--- a/feature-dapp-impl/src/main/res/layout/item_dapp_header.xml
+++ b/feature-dapp-impl/src/main/res/layout/item_dapp_header.xml
@@ -47,6 +47,7 @@
             android:orientation="vertical"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginEnd="110dp"
             android:layout_marginStart="16dp">
 
             <TextView
