--- a/feature-staking-impl/src/main/res/layout/view_user_rewards.xml
+++ b/feature-staking-impl/src/main/res/layout/view_user_rewards.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="100dp"
             android:layout_marginBottom="24dp">
 
             <TextView
@@ -36,6 +37,7 @@
                 android:layout_marginTop="2dp"
                 android:ellipsize="end"
                 android:includeFontPadding="false"
+                android:lines="1"
                 android:textColor="@color/text_primary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/userRewardsTitle"
