--- a/app/src/main/res/navigation/root_nav_graph.xml
+++ b/app/src/main/res/navigation/root_nav_graph.xml
@@ -35,6 +35,14 @@
         app:popEnterAnim="@anim/fragment_open_enter"
         app:popExitAnim="@anim/fragment_open_exit" />
 
+    <action
+        android:id="@+id/action_open_update_notifications"
+        app:destination="@id/updateNotificationsFragment"
+        app:enterAnim="@anim/fragment_open_enter"
+        app:exitAnim="@anim/fragment_open_exit"
+        app:popEnterAnim="@anim/fragment_close_enter"
+        app:popExitAnim="@anim/fragment_close_exit" />
+
     <fragment
         android:id="@+id/splashFragment"
         android:name="io.novafoundation.nova.splash.presentation.SplashFragment"
@@ -70,5 +78,12 @@
         android:label="fragment_pincode"
         app:useAdd="true"
         tools:layout="@layout/fragment_pincode" />
+
+    <fragment
+        android:id="@+id/updateNotificationsFragment"
+        android:name="io.novafoundation.nova.feature_versions_impl.presentation.update.UpdateNotificationFragment"
+        android:label="updateNotificationsFragment"
+        app:useAdd="true"
+        tools:layout="@layout/fragment_update_notifications" />
 
 </navigation>
