--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -138,6 +138,10 @@
         <item name="android:textSize">?attr/textSizeSubHeadline</item>
     </style>
 
+    <style name="TextAppearance.NovaFoundation.Regular.SubHeadline.Primary">
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
     <style name="TextAppearance.NovaFoundation.Title3" parent="TextAppearance.NovaFoundation.Regular">
         <item name="android:textSize">?attr/textSizeTitle3</item>
     </style>
