--- a/feature-governance-impl/src/main/res/layout/item_delegations_header.xml
+++ b/feature-governance-impl/src/main/res/layout/item_delegations_header.xml
@@ -2,9 +2,11 @@
 <io.novafoundation.nova.common.view.BannerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/itemDelegationBanner"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
+    android:layout_marginTop="4dp"
     android:layout_marginEnd="16dp"
     android:layout_marginBottom="8dp"
     android:paddingStart="12dp"
@@ -12,6 +14,7 @@
     android:paddingBottom="12dp"
     android:src="@drawable/ic_banner_delegate_image"
     app:bannerBackground="@drawable/ic_banner_blue_gradient"
+    app:showClose="true"
     tools:background="@android:color/black">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,17 +37,6 @@
             android:textColor="@color/text_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/itemDelegationHeaderClose"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:padding="12dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_close_circle_translucent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
